// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> snapshots Expect snapshot to match 1`] = `
<svg
  viewBox="0 0 11 11"
  width="18px"
>
  <g
    fill="currentColor"
    transform="translate(-11.000000, -22.000000)"
  >
    <g
      transform="translate(11.000000, 22.000000)"
    >
      <rect
        height="11"
        width="1"
        x="5"
        y="0"
      />
      <rect
        height="11"
        transform="translate(5.500000, 5.500000) rotate(-270.000000) translate(-5.500000, -5.500000) "
        width="1"
        x="5"
        y="0"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 2`] = `
<svg
  viewBox="0 0 50 50"
  width="18px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="currentColor"
      transform="translate(-110.000000, -94.000000)"
    >
      <g>
        <path
          d="M136,118 L160,118 L160,120 L136,120 L136,144 L134,144 L134,120 L110,120 L110,118 L134,118 L134,94 L136,94 L136,118 Z"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 3`] = `
<svg
  viewBox="0 0 8 9"
  width="18px"
>
  <g
    fill="currentColor"
    transform="translate(-20.000000, -11.000000)"
  >
    <g
      transform="translate(12.000000, 11.000000)"
    >
      <path
        d="M11,5 L8,5 L12,0 L16,5 L13,5 L13,9 L11,9 L11,5 Z"
        id="Icons/Arrow-sort-up"
        transform="translate(12.000000, 4.500000) scale(1, -1) rotate(-180.000000) translate(-12.000000, -4.500000) "
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 4`] = `
<svg
  viewBox="0 0 13 13"
  width="18px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="currentColor"
      fillRule="nonzero"
      transform="translate(-17.000000, -17.000000)"
    >
      <g
        transform="translate(0.000000, 1.000000)"
      >
        <g
          transform="translate(17.000000, 16.000000)"
        >
          <path
            d="M7.8,5.2 L2.94666667,5.2 L6.41333333,1.73333333 L5.2,0.52 L0.26,5.46 C-0.0866666667,5.80666667 -0.0866666667,6.32666667 0.26,6.67333333 L5.2,11.6133333 L6.41333333,10.4 L2.94666667,6.93333333 L7.8,6.93333333 C9.70666667,6.93333333 11.2666667,8.49333333 11.2666667,10.4 L11.2666667,13 L13,13 L13,10.4 C13,7.54 10.66,5.2 7.8,5.2 Z"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 5`] = `
<svg
  viewBox="0 0 16 16"
  width="18px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="currentColor"
      transform="translate(-1334.000000, -22.000000)"
    >
      <g
        transform="translate(1334.000000, 22.000000)"
      >
        <path
          d="M15,4 L14,4 L14,10 C14,10.552 13.552,11 13,11 L6.828,11 L5,13 L10,13 L13,16 L13,13 L15,13 C15.552,13 16,12.552 16,12 L16,5 C16,4.448 15.552,4 15,4 Z"
          fillRule="nonzero"
        />
        <path
          d="M1,0 L11,0 C11.552,0 12,0.448 12,1 L12,8 C12,8.552 11.552,9 11,9 L6,9 L3,12 L3,9 L1,9 C0.448,9 0,8.552 0,8 L0,1 C0,0.448 0.448,0 1,0 Z"
          fillRule="nonzero"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 6`] = `
<svg
  viewBox="0 0 11 7"
  width="18px"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      stroke="currentColor"
      strokeWidth="1.2"
      transform="translate(-321.000000, -147.000000)"
    >
      <polyline
        points="324.045716 144.990072 329.062822 150.007178 324.009928 155.060072"
        transform="translate(326.536375, 150.025072) rotate(90.000000) translate(-326.536375, -150.025072) "
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 7`] = `
<svg
  viewBox="0 0 12 12"
  width="18px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="currentColor"
      fillRule="nonzero"
    >
      <polygon
        points="11.53 1.53 10.47 0.47 6 4.94 1.53 0.47 0.47 1.53 4.94 6 0.47 10.47 1.53 11.53 6 7.06 10.47 11.53 11.53 10.47 7.06 6"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 8`] = `
<svg
  viewBox="0 0 18 18"
  width="18px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="currentColor"
      fillRule="nonzero"
      transform="translate(-1334.000000, -11.000000)"
    >
      <g>
        <g
          transform="translate(1.000000, 0.000000)"
        >
          <g
            transform="translate(1266.000000, 0.000000)"
          >
            <g
              transform="translate(67.000000, 11.000000)"
            >
              <path
                d="M14.5125,5.0625 L16.2,3.375 L14.625,1.8 L12.9375,3.4875 C12.15,2.925 11.1375,2.475 10.125,2.3625 L10.125,0 L7.875,0 L7.875,2.3625 C6.8625,2.5875 5.85,2.925 5.0625,3.4875 L3.4875,1.8 L1.8,3.4875 L3.4875,5.175 C2.925,5.85 2.475,6.8625 2.3625,7.875 L0,7.875 L0,10.125 L2.3625,10.125 C2.5875,11.1375 2.925,12.15 3.4875,12.9375 L1.8,14.625 L3.375,16.2 L5.0625,14.5125 C5.85,15.075 6.8625,15.525 7.875,15.6375 L7.875,18 L10.125,18 L10.125,15.6375 C11.1375,15.4125 12.15,15.075 12.9375,14.5125 L14.625,16.2 L16.2,14.625 L14.5125,12.9375 C15.075,12.15 15.525,11.1375 15.6375,10.125 L18,10.125 L18,7.875 L15.6375,7.875 C15.525,6.8625 15.075,5.85 14.5125,5.0625 Z M9,12.375 C7.0875,12.375 5.625,10.9125 5.625,9 C5.625,7.0875 7.0875,5.625 9,5.625 C10.9125,5.625 12.375,7.0875 12.375,9 C12.375,10.9125 10.9125,12.375 9,12.375 Z"
              />
            </g>
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 9`] = `
<svg
  viewBox="0 0 21 15"
  width="18px"
>
  <defs>
    <path
      d="M6.66233766,8.3125 C8.73506494,8.3125 10.3636364,9.975 10.3636364,12.0909091 L0,12.0909091 C0,9.975 1.62857143,8.3125 3.7012987,8.3125 L6.66233766,8.3125 Z M5.18181818,6.80113636 C3.55324675,6.80113636 2.22077922,5.44090909 2.22077922,3.77840909 L2.22077922,3.02272727 C2.22077922,1.36022727 3.55324675,0 5.18181818,0 C6.81038961,0 8.14285714,1.36022727 8.14285714,3.02272727 L8.14285714,3.77840909 C8.14285714,5.44090909 6.81038961,6.80113636 5.18181818,6.80113636 Z"
    />
  </defs>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      transform="translate(-1254.000000, -284.000000)"
    >
      <g
        transform="translate(1255.000000, 285.000000)"
      >
        <path
          d="M15.6623377,8.3125 C17.7350649,8.3125 19.3636364,9.975 19.3636364,12.0909091 L9,12.0909091 C9,9.975 10.6285714,8.3125 12.7012987,8.3125 L15.6623377,8.3125 Z M14.1818182,6.80113636 C12.5532468,6.80113636 11.2207792,5.44090909 11.2207792,3.77840909 L11.2207792,3.02272727 C11.2207792,1.36022727 12.5532468,0 14.1818182,0 C15.8103896,0 17.1428571,1.36022727 17.1428571,3.02272727 L17.1428571,3.77840909 C17.1428571,5.44090909 15.8103896,6.80113636 14.1818182,6.80113636 Z"
          fill="currentColor"
        />
        <g>
          <path
            d="M6.66233766,8.3125 C8.73506494,8.3125 10.3636364,9.975 10.3636364,12.0909091 L0,12.0909091 C0,9.975 1.62857143,8.3125 3.7012987,8.3125 L6.66233766,8.3125 Z M5.18181818,6.80113636 C3.55324675,6.80113636 2.22077922,5.44090909 2.22077922,3.77840909 L2.22077922,3.02272727 C2.22077922,1.36022727 3.55324675,0 5.18181818,0 C6.81038961,0 8.14285714,1.36022727 8.14285714,3.02272727 L8.14285714,3.77840909 C8.14285714,5.44090909 6.81038961,6.80113636 5.18181818,6.80113636 Z"
          />
          <path
            d="M6.66233766,7.8125 C9.01354116,7.8125 10.8636364,9.70113885 10.8636364,12.0909091 L10.8636364,12.5909091 L-0.5,12.5909091 L-0.5,12.0909091 C-0.5,9.70113885 1.3500952,7.8125 3.7012987,7.8125 L6.66233766,7.8125 Z M5.18181818,7.30113636 C3.27477053,7.30113636 1.72077922,5.71477024 1.72077922,3.77840909 L1.72077922,3.02272727 C1.72077922,1.08636613 3.27477053,-0.5 5.18181818,-0.5 C7.08886584,-0.5 8.64285714,1.08636613 8.64285714,3.02272727 L8.64285714,3.77840909 C8.64285714,5.71477024 7.08886584,7.30113636 5.18181818,7.30113636 Z"
            fill="currentColor"
            strokeWidth="1"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 10`] = `
<svg
  viewBox="0 0 14 17"
  width="18px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="currentColor"
      fillRule="nonzero"
      transform="translate(-23.000000, -14.000000)"
    >
      <g
        transform="translate(23.000000, 1.000000)"
      >
        <g
          transform="translate(0.000000, 13.000000)"
        >
          <path
            d="M14,6 L10,6 L10,0 L4,0 L4,6 L0,6 L7,13 L14,6 Z M0,15 L0,17 L14,17 L14,15 L0,15 Z"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 11`] = `
<svg
  viewBox="0 0 24 24"
  width="18px"
>
  <g
    fill="currentColor"
    fillRule="nonzero"
    transform="translate(-11.000000, -12.000000)"
  >
    <path
      d="M23,12 C16.383,12 11,17.383 11,24 C11,30.617 16.383,36 23,36 C29.617,36 35,30.617 35,24 C35,17.383 29.617,12 23,12 Z M24.645,17 L24,26 L22,26 L21.392,17 L24.645,17 Z M23,32 C21.895,32 21,31.105 21,30 C21,28.895 21.895,28 23,28 C24.105,28 25,28.895 25,30 C25,31.105 24.105,32 23,32 Z"
      id="Shape"
    />
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 12`] = `
<svg
  viewBox="0 0 16 12"
  width="18px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="currentColor"
      fillRule="nonzero"
      transform="translate(-618.000000, -14.000000)"
    >
      <g
        transform="translate(1.000000, 0.000000)"
      >
        <g
          transform="translate(445.000000, 0.000000)"
        >
          <g
            transform="translate(172.000000, 14.000000)"
          >
            <path
              d="M7.975,12 C11.575,12 14.375,8.9 15.575,7.1 C16.075,6.4 16.075,5.5 15.575,4.8 C14.375,3.1 11.575,0 7.975,0 C4.375,0 1.575,3.1 0.375,4.9 C-0.125,5.6 -0.125,6.5 0.375,7.1 C1.575,8.9 4.375,12 7.975,12 Z M7.975,3 C9.675,3 10.975,4.3 10.975,6 C10.975,7.7 9.675,9 7.975,9 C6.275,9 4.975,7.7 4.975,6 C4.975,4.3 6.275,3 7.975,3 Z"
            />
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 13`] = `
<svg
  viewBox="0 0 14 13"
  width="18px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="currentColor"
      transform="translate(-13.000000, -16.000000)"
    >
      <g
        transform="translate(13.000000, 16.000000)"
      >
        <rect
          height="2"
          id="Rectangle-16"
          rx="1"
          width="14"
          x="0"
          y="9"
        />
        <rect
          height="2"
          id="Rectangle-16"
          rx="1"
          width="14"
          x="0"
          y="2"
        />
        <rect
          height="6"
          id="Rectangle"
          rx="1.5"
          width="3"
          x="3"
          y="0"
        />
        <rect
          height="6"
          id="Rectangle"
          rx="1.5"
          width="3"
          x="8"
          y="7"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 14`] = `
<svg
  viewBox="0 0 38 36"
  width="18px"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      transform="translate(-61.000000, 1.000000)"
    >
      <polyline
        points="88.5 13.28 93.51 16 98.51 9"
        stroke="currentColor"
        strokeWidth="1.2"
      />
      <polyline
        points="61.5 17 64.9380014 20 68.3760028 13 73.5330048 24 76.9710062 16 80.4090076 19 84 14.183"
        stroke="currentColor"
        strokeWidth="1.2"
      />
      <rect
        height="35"
        id="Rectangle-path"
        stroke="currentColor"
        strokeLinecap="square"
        width="37"
        x="61.5"
        y="-0.5"
      />
      <circle
        cx="86.5"
        cy="12.5"
        fill="currentColor"
        r="3.5"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 15`] = `
<svg
  height="20px"
  viewBox="0 0 20 20"
  width="20px"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="currentColor"
    >
      <path
        d="M9,15 L11,15 L11,9 L9,9 L9,15 Z M10,0 C4.48,0 0,4.48 0,10 C0,15.52 4.48,20 10,20 C15.52,20 20,15.52 20,10 C20,4.48 15.52,0 10,0 Z M10,18 C5.59,18 2,14.41 2,10 C2,5.59 5.59,2 10,2 C14.41,2 18,5.59 18,10 C18,14.41 14.41,18 10,18 Z M9,7 L11,7 L11,5 L9,5 L9,7 Z"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 16`] = `
<svg
  viewBox="0 0 16 14"
  width="18px"
>
  <g
    fill="currentColor"
    fillRule="nonzero"
    transform="translate(-1203.000000, -18.000000)"
  >
    <g
      transform="translate(1203.000000, 15.000000)"
    >
      <path
        d="M15,3 L1,3 C0.448,3 0,3.447 0,4 L0,16 C0,16.553 0.448,17 1,17 L15,17 C15.552,17 16,16.553 16,16 L16,4 C16,3.447 15.552,3 15,3 Z M14,15 L2,15 L2,8.723 L7.504,11.868 C7.812,12.044 8.189,12.044 8.496,11.868 L14,8.723 L14,15 Z M14,6.42 L8,9.849 L2,6.42 L2,5 L14,5 L14,6.42 Z"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 17`] = `
<svg
  viewBox="0 0 9 2"
  width="18px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="currentColor"
      transform="translate(-104.000000, -42.000000)"
    >
      <rect
        height="9"
        transform="translate(108.500000, 43.000000) rotate(90.000000) translate(-108.500000, -43.000000) "
        width="2"
        x="107.5"
        y="38.5"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 18`] = `
<svg
  viewBox="0 0 10 10"
  width="18px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="currentColor"
      transform="translate(-103.000000, -12.000000)"
    >
      <g
        transform="translate(103.000000, 12.000000)"
      >
        <rect
          height="10"
          width="2"
          x="4"
          y="0"
        />
        <rect
          height="10"
          transform="translate(5.000000, 5.000000) rotate(90.000000) translate(-5.000000, -5.000000) "
          width="2"
          x="4"
          y="0"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 19`] = `
<svg
  viewBox="0 0 17 17"
  width="18px"
>
  <g
    fill="none"
    stroke="none"
    strokeLinecap="round"
    strokeWidth="1"
  >
    <g
      stroke="currentColor"
      strokeWidth="2"
      transform="translate(1.000000, 1.000000)"
    >
      <g>
        <circle
          cx="6.5"
          cy="6.5"
          r="6"
        />
        <path
          d="M14.5,14.5 L10.742,10.742"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 20`] = `
<svg
  viewBox="0 0 10 11"
  width="18px"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="currentColor"
      transform="translate(-1297.000000, -286.000000)"
    >
      <path
        d="M1303.06122,293.5625 C1304.94694,293.5625 1306.42857,295.075 1306.42857,297 L1297,297 C1297,295.075 1298.48163,293.5625 1300.36735,293.5625 L1303.06122,293.5625 Z M1301.71429,292.1875 C1300.23265,292.1875 1299.02041,290.95 1299.02041,289.4375 L1299.02041,288.75 C1299.02041,287.2375 1300.23265,286 1301.71429,286 C1303.19592,286 1304.40816,287.2375 1304.40816,288.75 L1304.40816,289.4375 C1304.40816,290.95 1303.19592,292.1875 1301.71429,292.1875 Z"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 21`] = `
<svg
  viewBox="0 0 16 18"
  width="18px"
>
  <g
    transform="translate(-12.000000, -11.000000)"
  >
    <g
      fill="currentColor"
      transform="translate(12.000000, 11.000000)"
    >
      <path
        d="M3,14 L0,14 L4,9 L8,14 L5,14 L5,18 L3,18 L3,14 Z"
        transform="translate(4.000000, 13.500000) scale(1, -1) translate(-4.000000, -13.500000) "
      />
      <path
        d="M11,5 L8,5 L12,0 L16,5 L13,5 L13,9 L11,9 L11,5 Z"
        transform="translate(12.000000, 4.500000) scale(1, -1) rotate(-180.000000) translate(-12.000000, -4.500000) "
      />
    </g>
    <path
      d="M15.3928571,15.3571429 L25.4087883,24.4625348"
      stroke="currentColor"
      strokeLinecap="square"
      strokeWidth="1.5"
    />
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 22`] = `
<svg
  viewBox="0 0 11 11"
  width="18px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="currentColor"
    >
      <g
        transform="translate(5.500000, 5.500000) rotate(-270.000000) translate(-5.500000, -5.500000) "
      >
        <g>
          <rect
            height="11"
            width="1"
            x="0"
            y="0"
          />
          <rect
            height="11"
            width="1"
            x="5"
            y="0"
          />
          <rect
            height="11"
            width="1"
            x="10"
            y="0"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 23`] = `
<svg
  viewBox="0 0 14 13"
  width="18px"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      id="UI-/-Dropdown"
      stroke="currentColor"
      strokeWidth="1.5"
      transform="translate(-175.000000, -208.000000)"
    >
      <polyline
        id="Path-2"
        points="176 215.527473 179.75 219.153846 188 209"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 24`] = `
<svg
  viewBox="0 0 14 18"
  width="18px"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="currentColor"
    >
      <g
        id="Group"
      >
        <rect
          height="18"
          id="Rectangle"
          width="13.6140351"
          x="0"
          y="0"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 25`] = `
<svg
  viewBox="0 0 15 18"
  width="18px"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="currentColor"
      transform="translate(-29.000000, 0.000000)"
    >
      <g>
        <g
          transform="translate(29.000000, 0.000000)"
        >
          <rect
            height="8"
            width="13.6140351"
            x="0.692982456"
            y="10"
          />
          <rect
            height="8"
            width="13.6140351"
            x="0.692982456"
            y="0"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 26`] = `
<svg
  viewBox="0 0 14 18"
  width="18px"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="currentColor"
      transform="translate(-59.000000, 0.000000)"
    >
      <g
        transform="translate(59.000000, 0.000000)"
      >
        <rect
          height="4"
          width="13.6140351"
          x="0.385964912"
          y="14"
        />
        <rect
          height="4"
          width="13.6140351"
          x="0.385964912"
          y="7"
        />
        <rect
          height="4"
          width="13.6140351"
          x="0.385964912"
          y="0"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 27`] = `
<svg
  viewBox="0 0 19 17"
  width="18px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      transform="translate(-304.000000, -527.000000)"
    >
      <g
        transform="translate(304.000000, 527.000000)"
      >
        <rect
          fill="currentColor"
          height="5"
          width="19"
          x="0"
          y="0"
        />
        <rect
          fill="currentColor"
          height="1"
          width="19"
          x="0"
          y="8"
        />
        <rect
          fill="currentColor"
          height="1"
          width="19"
          x="0"
          y="12"
        />
        <rect
          fill="currentColor"
          height="12"
          width="1"
          x="9"
          y="5"
        />
        <rect
          height="16"
          stroke="currentColor"
          width="18"
          x="0.5"
          y="0.5"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 28`] = `
<svg
  viewBox="0 0 91 62"
  width="30px"
>
  <g
    transform="translate(-48.000000, -9.000000)"
  >
    <g
      transform="translate(48.000000, 9.000000)"
    >
      <rect
        fill="transparent"
        height="62"
        width="91"
        x="0"
        y="0"
      />
      <rect
        fill="currentColor"
        height="53"
        width="1"
        x="16"
        y="9"
      />
      <rect
        fill="currentColor"
        height="53"
        width="1"
        x="36"
        y="9"
      />
      <rect
        fill="currentColor"
        height="9"
        width="91"
        x="0"
        y="0"
      />
      <rect
        fill="#BC2B3F"
        height="9"
        width="16"
        x="0"
        y="31"
      />
      <rect
        fill="#BC2B3F"
        height="9"
        width="16"
        x="0"
        y="53"
      />
      <rect
        fill="#398544"
        height="9"
        width="16"
        x="0"
        y="9"
      />
      <rect
        fill="#398544"
        height="9"
        width="16"
        x="0"
        y="20"
      />
      <rect
        fill="#398544"
        height="9"
        width="16"
        x="0"
        y="42"
      />
      <rect
        fill="currentColor"
        height="2"
        width="91"
        x="0"
        y="18"
      />
      <rect
        fill="currentColor"
        height="2"
        width="91"
        x="0"
        y="29"
      />
      <rect
        fill="currentColor"
        height="2"
        width="91"
        x="0"
        y="40"
      />
      <rect
        fill="currentColor"
        height="2"
        width="91"
        x="0"
        y="51"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 29`] = `
<svg
  viewBox="0 0 91 62"
  width="30px"
>
  <g
    transform="translate(-48.000000, -9.000000)"
  >
    <rect
      fill="transparent"
      height="62"
      width="91"
      x="48"
      y="9"
    />
    <rect
      fill="currentColor"
      height="53"
      width="1"
      x="64"
      y="18"
    />
    <rect
      fill="currentColor"
      height="53"
      width="1"
      x="84"
      y="18"
    />
    <rect
      fill="currentColor"
      height="9"
      width="91"
      x="48"
      y="9"
    />
    <rect
      fill="currentColor"
      height="2"
      width="91"
      x="48"
      y="27"
    />
    <rect
      fill="currentColor"
      height="2"
      width="91"
      x="48"
      y="38"
    />
    <rect
      fill="currentColor"
      height="2"
      width="91"
      x="48"
      y="49"
    />
    <rect
      fill="currentColor"
      height="2"
      width="91"
      x="48"
      y="60"
    />
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match 30`] = `
<svg
  viewBox="0 0 141 42"
  width="50px"
>
  <defs>
    <linearGradient
      id="trace-gradient"
      x1="50%"
      x2="50%"
      y1="0%"
      y2="92.1217315%"
    >
      <stop
        offset="0%"
        stopColor="currentColor"
      />
      <stop
        offset="100%"
        stopColor="currentColor"
        stopOpacity="0"
      />
    </linearGradient>
  </defs>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <g
      transform="translate(-22.000000, -30.000000)"
    >
      <polygon
        fill="url(#trace-gradient)"
        opacity="0.237406716"
        points="23 62.3021054 30.4240079 56.5651795 37.5827513 59.4336425 44.9389938 51.1076915 52.319224 49.11219 59.6384854 54.5826359 66.89258 40.2839833 74.2144401 42.3741331 81.6252547 35.4484697 88.9489139 34.3493101 96.1386414 40.2839833 103.458702 45.5206254 110.890906 43.2907567 118.177584 50.2226173 125.3907 40.2839833 132.717957 37.9251 140.086393 32.7549371 147.445434 34.3493101 154.573993 31 162 31.9273279 162 76 23.0189852 76"
      />
      <polyline
        points="23 62 30.4240079 56.3184428 37.5827513 59.1592214 44.9389938 50.9136265 52.319224 48.9373841 59.6384854 54.3550332 66.89258 40.194381 74.2144401 42.2643581 81.6252547 35.4055363 88.9489139 34.3169849 96.1386414 40.194381 103.458702 45.3804827 110.890906 43.1721351 118.177584 50.0370944 125.3907 40.194381 132.717957 37.8582639 140.086393 32.7379997 147.445434 34.3169849 154.573993 31 162 31.918378"
        stroke="currentColor"
        strokeWidth="1.5"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 1`] = `
<svg
  viewBox="0 0 11 11"
  width="25%"
>
  <g
    fill="blue"
    transform="translate(-11.000000, -22.000000)"
  >
    <g
      transform="translate(11.000000, 22.000000)"
    >
      <rect
        height="11"
        width="1"
        x="5"
        y="0"
      />
      <rect
        height="11"
        transform="translate(5.500000, 5.500000) rotate(-270.000000) translate(-5.500000, -5.500000) "
        width="1"
        x="5"
        y="0"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 2`] = `
<svg
  viewBox="0 0 50 50"
  width="25%"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      transform="translate(-110.000000, -94.000000)"
    >
      <g>
        <path
          d="M136,118 L160,118 L160,120 L136,120 L136,144 L134,144 L134,120 L110,120 L110,118 L134,118 L134,94 L136,94 L136,118 Z"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 3`] = `
<svg
  viewBox="0 0 8 9"
  width="25%"
>
  <g
    fill="blue"
    transform="translate(-20.000000, -11.000000)"
  >
    <g
      transform="translate(12.000000, 11.000000)"
    >
      <path
        d="M11,5 L8,5 L12,0 L16,5 L13,5 L13,9 L11,9 L11,5 Z"
        id="Icons/Arrow-sort-up"
        transform="translate(12.000000, 4.500000) scale(1, -1) rotate(-180.000000) translate(-12.000000, -4.500000) "
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 4`] = `
<svg
  viewBox="0 0 13 13"
  width="25%"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      fillRule="nonzero"
      transform="translate(-17.000000, -17.000000)"
    >
      <g
        transform="translate(0.000000, 1.000000)"
      >
        <g
          transform="translate(17.000000, 16.000000)"
        >
          <path
            d="M7.8,5.2 L2.94666667,5.2 L6.41333333,1.73333333 L5.2,0.52 L0.26,5.46 C-0.0866666667,5.80666667 -0.0866666667,6.32666667 0.26,6.67333333 L5.2,11.6133333 L6.41333333,10.4 L2.94666667,6.93333333 L7.8,6.93333333 C9.70666667,6.93333333 11.2666667,8.49333333 11.2666667,10.4 L11.2666667,13 L13,13 L13,10.4 C13,7.54 10.66,5.2 7.8,5.2 Z"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 5`] = `
<svg
  viewBox="0 0 16 16"
  width="25%"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      transform="translate(-1334.000000, -22.000000)"
    >
      <g
        transform="translate(1334.000000, 22.000000)"
      >
        <path
          d="M15,4 L14,4 L14,10 C14,10.552 13.552,11 13,11 L6.828,11 L5,13 L10,13 L13,16 L13,13 L15,13 C15.552,13 16,12.552 16,12 L16,5 C16,4.448 15.552,4 15,4 Z"
          fillRule="nonzero"
        />
        <path
          d="M1,0 L11,0 C11.552,0 12,0.448 12,1 L12,8 C12,8.552 11.552,9 11,9 L6,9 L3,12 L3,9 L1,9 C0.448,9 0,8.552 0,8 L0,1 C0,0.448 0.448,0 1,0 Z"
          fillRule="nonzero"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 6`] = `
<svg
  viewBox="0 0 11 7"
  width="25%"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      stroke="blue"
      strokeWidth="1.2"
      transform="translate(-321.000000, -147.000000)"
    >
      <polyline
        points="324.045716 144.990072 329.062822 150.007178 324.009928 155.060072"
        transform="translate(326.536375, 150.025072) rotate(90.000000) translate(-326.536375, -150.025072) "
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 7`] = `
<svg
  viewBox="0 0 12 12"
  width="25%"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      fillRule="nonzero"
    >
      <polygon
        points="11.53 1.53 10.47 0.47 6 4.94 1.53 0.47 0.47 1.53 4.94 6 0.47 10.47 1.53 11.53 6 7.06 10.47 11.53 11.53 10.47 7.06 6"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 8`] = `
<svg
  viewBox="0 0 18 18"
  width="25%"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      fillRule="nonzero"
      transform="translate(-1334.000000, -11.000000)"
    >
      <g>
        <g
          transform="translate(1.000000, 0.000000)"
        >
          <g
            transform="translate(1266.000000, 0.000000)"
          >
            <g
              transform="translate(67.000000, 11.000000)"
            >
              <path
                d="M14.5125,5.0625 L16.2,3.375 L14.625,1.8 L12.9375,3.4875 C12.15,2.925 11.1375,2.475 10.125,2.3625 L10.125,0 L7.875,0 L7.875,2.3625 C6.8625,2.5875 5.85,2.925 5.0625,3.4875 L3.4875,1.8 L1.8,3.4875 L3.4875,5.175 C2.925,5.85 2.475,6.8625 2.3625,7.875 L0,7.875 L0,10.125 L2.3625,10.125 C2.5875,11.1375 2.925,12.15 3.4875,12.9375 L1.8,14.625 L3.375,16.2 L5.0625,14.5125 C5.85,15.075 6.8625,15.525 7.875,15.6375 L7.875,18 L10.125,18 L10.125,15.6375 C11.1375,15.4125 12.15,15.075 12.9375,14.5125 L14.625,16.2 L16.2,14.625 L14.5125,12.9375 C15.075,12.15 15.525,11.1375 15.6375,10.125 L18,10.125 L18,7.875 L15.6375,7.875 C15.525,6.8625 15.075,5.85 14.5125,5.0625 Z M9,12.375 C7.0875,12.375 5.625,10.9125 5.625,9 C5.625,7.0875 7.0875,5.625 9,5.625 C10.9125,5.625 12.375,7.0875 12.375,9 C12.375,10.9125 10.9125,12.375 9,12.375 Z"
              />
            </g>
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 9`] = `
<svg
  viewBox="0 0 21 15"
  width="25%"
>
  <defs>
    <path
      d="M6.66233766,8.3125 C8.73506494,8.3125 10.3636364,9.975 10.3636364,12.0909091 L0,12.0909091 C0,9.975 1.62857143,8.3125 3.7012987,8.3125 L6.66233766,8.3125 Z M5.18181818,6.80113636 C3.55324675,6.80113636 2.22077922,5.44090909 2.22077922,3.77840909 L2.22077922,3.02272727 C2.22077922,1.36022727 3.55324675,0 5.18181818,0 C6.81038961,0 8.14285714,1.36022727 8.14285714,3.02272727 L8.14285714,3.77840909 C8.14285714,5.44090909 6.81038961,6.80113636 5.18181818,6.80113636 Z"
    />
  </defs>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      transform="translate(-1254.000000, -284.000000)"
    >
      <g
        transform="translate(1255.000000, 285.000000)"
      >
        <path
          d="M15.6623377,8.3125 C17.7350649,8.3125 19.3636364,9.975 19.3636364,12.0909091 L9,12.0909091 C9,9.975 10.6285714,8.3125 12.7012987,8.3125 L15.6623377,8.3125 Z M14.1818182,6.80113636 C12.5532468,6.80113636 11.2207792,5.44090909 11.2207792,3.77840909 L11.2207792,3.02272727 C11.2207792,1.36022727 12.5532468,0 14.1818182,0 C15.8103896,0 17.1428571,1.36022727 17.1428571,3.02272727 L17.1428571,3.77840909 C17.1428571,5.44090909 15.8103896,6.80113636 14.1818182,6.80113636 Z"
          fill="blue"
        />
        <g>
          <path
            d="M6.66233766,8.3125 C8.73506494,8.3125 10.3636364,9.975 10.3636364,12.0909091 L0,12.0909091 C0,9.975 1.62857143,8.3125 3.7012987,8.3125 L6.66233766,8.3125 Z M5.18181818,6.80113636 C3.55324675,6.80113636 2.22077922,5.44090909 2.22077922,3.77840909 L2.22077922,3.02272727 C2.22077922,1.36022727 3.55324675,0 5.18181818,0 C6.81038961,0 8.14285714,1.36022727 8.14285714,3.02272727 L8.14285714,3.77840909 C8.14285714,5.44090909 6.81038961,6.80113636 5.18181818,6.80113636 Z"
          />
          <path
            d="M6.66233766,7.8125 C9.01354116,7.8125 10.8636364,9.70113885 10.8636364,12.0909091 L10.8636364,12.5909091 L-0.5,12.5909091 L-0.5,12.0909091 C-0.5,9.70113885 1.3500952,7.8125 3.7012987,7.8125 L6.66233766,7.8125 Z M5.18181818,7.30113636 C3.27477053,7.30113636 1.72077922,5.71477024 1.72077922,3.77840909 L1.72077922,3.02272727 C1.72077922,1.08636613 3.27477053,-0.5 5.18181818,-0.5 C7.08886584,-0.5 8.64285714,1.08636613 8.64285714,3.02272727 L8.64285714,3.77840909 C8.64285714,5.71477024 7.08886584,7.30113636 5.18181818,7.30113636 Z"
            fill="blue"
            strokeWidth="1"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 10`] = `
<svg
  viewBox="0 0 14 17"
  width="25%"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      fillRule="nonzero"
      transform="translate(-23.000000, -14.000000)"
    >
      <g
        transform="translate(23.000000, 1.000000)"
      >
        <g
          transform="translate(0.000000, 13.000000)"
        >
          <path
            d="M14,6 L10,6 L10,0 L4,0 L4,6 L0,6 L7,13 L14,6 Z M0,15 L0,17 L14,17 L14,15 L0,15 Z"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 11`] = `
<svg
  viewBox="0 0 24 24"
  width="25%"
>
  <g
    fill="blue"
    fillRule="nonzero"
    transform="translate(-11.000000, -12.000000)"
  >
    <path
      d="M23,12 C16.383,12 11,17.383 11,24 C11,30.617 16.383,36 23,36 C29.617,36 35,30.617 35,24 C35,17.383 29.617,12 23,12 Z M24.645,17 L24,26 L22,26 L21.392,17 L24.645,17 Z M23,32 C21.895,32 21,31.105 21,30 C21,28.895 21.895,28 23,28 C24.105,28 25,28.895 25,30 C25,31.105 24.105,32 23,32 Z"
      id="Shape"
    />
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 12`] = `
<svg
  viewBox="0 0 16 12"
  width="25%"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      fillRule="nonzero"
      transform="translate(-618.000000, -14.000000)"
    >
      <g
        transform="translate(1.000000, 0.000000)"
      >
        <g
          transform="translate(445.000000, 0.000000)"
        >
          <g
            transform="translate(172.000000, 14.000000)"
          >
            <path
              d="M7.975,12 C11.575,12 14.375,8.9 15.575,7.1 C16.075,6.4 16.075,5.5 15.575,4.8 C14.375,3.1 11.575,0 7.975,0 C4.375,0 1.575,3.1 0.375,4.9 C-0.125,5.6 -0.125,6.5 0.375,7.1 C1.575,8.9 4.375,12 7.975,12 Z M7.975,3 C9.675,3 10.975,4.3 10.975,6 C10.975,7.7 9.675,9 7.975,9 C6.275,9 4.975,7.7 4.975,6 C4.975,4.3 6.275,3 7.975,3 Z"
            />
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 13`] = `
<svg
  viewBox="0 0 14 13"
  width="25%"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      transform="translate(-13.000000, -16.000000)"
    >
      <g
        transform="translate(13.000000, 16.000000)"
      >
        <rect
          height="2"
          id="Rectangle-16"
          rx="1"
          width="14"
          x="0"
          y="9"
        />
        <rect
          height="2"
          id="Rectangle-16"
          rx="1"
          width="14"
          x="0"
          y="2"
        />
        <rect
          height="6"
          id="Rectangle"
          rx="1.5"
          width="3"
          x="3"
          y="0"
        />
        <rect
          height="6"
          id="Rectangle"
          rx="1.5"
          width="3"
          x="8"
          y="7"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 14`] = `
<svg
  viewBox="0 0 38 36"
  width="25%"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      transform="translate(-61.000000, 1.000000)"
    >
      <polyline
        points="88.5 13.28 93.51 16 98.51 9"
        stroke="blue"
        strokeWidth="1.2"
      />
      <polyline
        points="61.5 17 64.9380014 20 68.3760028 13 73.5330048 24 76.9710062 16 80.4090076 19 84 14.183"
        stroke="blue"
        strokeWidth="1.2"
      />
      <rect
        height="35"
        id="Rectangle-path"
        stroke="currentColor"
        strokeLinecap="square"
        width="37"
        x="61.5"
        y="-0.5"
      />
      <circle
        cx="86.5"
        cy="12.5"
        fill="blue"
        r="3.5"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 15`] = `
<svg
  height="20px"
  viewBox="0 0 20 20"
  width="20px"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
    >
      <path
        d="M9,15 L11,15 L11,9 L9,9 L9,15 Z M10,0 C4.48,0 0,4.48 0,10 C0,15.52 4.48,20 10,20 C15.52,20 20,15.52 20,10 C20,4.48 15.52,0 10,0 Z M10,18 C5.59,18 2,14.41 2,10 C2,5.59 5.59,2 10,2 C14.41,2 18,5.59 18,10 C18,14.41 14.41,18 10,18 Z M9,7 L11,7 L11,5 L9,5 L9,7 Z"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 16`] = `
<svg
  viewBox="0 0 16 14"
  width="25%"
>
  <g
    fill="blue"
    fillRule="nonzero"
    transform="translate(-1203.000000, -18.000000)"
  >
    <g
      transform="translate(1203.000000, 15.000000)"
    >
      <path
        d="M15,3 L1,3 C0.448,3 0,3.447 0,4 L0,16 C0,16.553 0.448,17 1,17 L15,17 C15.552,17 16,16.553 16,16 L16,4 C16,3.447 15.552,3 15,3 Z M14,15 L2,15 L2,8.723 L7.504,11.868 C7.812,12.044 8.189,12.044 8.496,11.868 L14,8.723 L14,15 Z M14,6.42 L8,9.849 L2,6.42 L2,5 L14,5 L14,6.42 Z"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 17`] = `
<svg
  viewBox="0 0 9 2"
  width="25%"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      transform="translate(-104.000000, -42.000000)"
    >
      <rect
        height="9"
        transform="translate(108.500000, 43.000000) rotate(90.000000) translate(-108.500000, -43.000000) "
        width="2"
        x="107.5"
        y="38.5"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 18`] = `
<svg
  viewBox="0 0 10 10"
  width="25%"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      transform="translate(-103.000000, -12.000000)"
    >
      <g
        transform="translate(103.000000, 12.000000)"
      >
        <rect
          height="10"
          width="2"
          x="4"
          y="0"
        />
        <rect
          height="10"
          transform="translate(5.000000, 5.000000) rotate(90.000000) translate(-5.000000, -5.000000) "
          width="2"
          x="4"
          y="0"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 19`] = `
<svg
  viewBox="0 0 17 17"
  width="25%"
>
  <g
    fill="none"
    stroke="none"
    strokeLinecap="round"
    strokeWidth="1"
  >
    <g
      stroke="blue"
      strokeWidth="2"
      transform="translate(1.000000, 1.000000)"
    >
      <g>
        <circle
          cx="6.5"
          cy="6.5"
          r="6"
        />
        <path
          d="M14.5,14.5 L10.742,10.742"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 20`] = `
<svg
  viewBox="0 0 10 11"
  width="25%"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      transform="translate(-1297.000000, -286.000000)"
    >
      <path
        d="M1303.06122,293.5625 C1304.94694,293.5625 1306.42857,295.075 1306.42857,297 L1297,297 C1297,295.075 1298.48163,293.5625 1300.36735,293.5625 L1303.06122,293.5625 Z M1301.71429,292.1875 C1300.23265,292.1875 1299.02041,290.95 1299.02041,289.4375 L1299.02041,288.75 C1299.02041,287.2375 1300.23265,286 1301.71429,286 C1303.19592,286 1304.40816,287.2375 1304.40816,288.75 L1304.40816,289.4375 C1304.40816,290.95 1303.19592,292.1875 1301.71429,292.1875 Z"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 21`] = `
<svg
  viewBox="0 0 16 18"
  width="25%"
>
  <g
    transform="translate(-12.000000, -11.000000)"
  >
    <g
      fill="blue"
      transform="translate(12.000000, 11.000000)"
    >
      <path
        d="M3,14 L0,14 L4,9 L8,14 L5,14 L5,18 L3,18 L3,14 Z"
        transform="translate(4.000000, 13.500000) scale(1, -1) translate(-4.000000, -13.500000) "
      />
      <path
        d="M11,5 L8,5 L12,0 L16,5 L13,5 L13,9 L11,9 L11,5 Z"
        transform="translate(12.000000, 4.500000) scale(1, -1) rotate(-180.000000) translate(-12.000000, -4.500000) "
      />
    </g>
    <path
      d="M15.3928571,15.3571429 L25.4087883,24.4625348"
      stroke="blue"
      strokeLinecap="square"
      strokeWidth="1.5"
    />
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 22`] = `
<svg
  viewBox="0 0 11 11"
  width="25%"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
    >
      <g
        transform="translate(5.500000, 5.500000) rotate(-270.000000) translate(-5.500000, -5.500000) "
      >
        <g>
          <rect
            height="11"
            width="1"
            x="0"
            y="0"
          />
          <rect
            height="11"
            width="1"
            x="5"
            y="0"
          />
          <rect
            height="11"
            width="1"
            x="10"
            y="0"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 23`] = `
<svg
  viewBox="0 0 14 13"
  width="25%"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      id="UI-/-Dropdown"
      stroke="blue"
      strokeWidth="1.5"
      transform="translate(-175.000000, -208.000000)"
    >
      <polyline
        id="Path-2"
        points="176 215.527473 179.75 219.153846 188 209"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 24`] = `
<svg
  viewBox="0 0 14 18"
  width="25%"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
    >
      <g
        id="Group"
      >
        <rect
          height="18"
          id="Rectangle"
          width="13.6140351"
          x="0"
          y="0"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 25`] = `
<svg
  viewBox="0 0 15 18"
  width="25%"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      transform="translate(-29.000000, 0.000000)"
    >
      <g>
        <g
          transform="translate(29.000000, 0.000000)"
        >
          <rect
            height="8"
            width="13.6140351"
            x="0.692982456"
            y="10"
          />
          <rect
            height="8"
            width="13.6140351"
            x="0.692982456"
            y="0"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 26`] = `
<svg
  viewBox="0 0 14 18"
  width="25%"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      transform="translate(-59.000000, 0.000000)"
    >
      <g
        transform="translate(59.000000, 0.000000)"
      >
        <rect
          height="4"
          width="13.6140351"
          x="0.385964912"
          y="14"
        />
        <rect
          height="4"
          width="13.6140351"
          x="0.385964912"
          y="7"
        />
        <rect
          height="4"
          width="13.6140351"
          x="0.385964912"
          y="0"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 27`] = `
<svg
  viewBox="0 0 19 17"
  width="25%"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      transform="translate(-304.000000, -527.000000)"
    >
      <g
        transform="translate(304.000000, 527.000000)"
      >
        <rect
          fill="blue"
          height="5"
          width="19"
          x="0"
          y="0"
        />
        <rect
          fill="blue"
          height="1"
          width="19"
          x="0"
          y="8"
        />
        <rect
          fill="blue"
          height="1"
          width="19"
          x="0"
          y="12"
        />
        <rect
          fill="blue"
          height="12"
          width="1"
          x="9"
          y="5"
        />
        <rect
          height="16"
          stroke="blue"
          width="18"
          x="0.5"
          y="0.5"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 28`] = `
<svg
  viewBox="0 0 91 62"
  width="25%"
>
  <g
    transform="translate(-48.000000, -9.000000)"
  >
    <g
      transform="translate(48.000000, 9.000000)"
    >
      <rect
        fill="transparent"
        height="62"
        width="91"
        x="0"
        y="0"
      />
      <rect
        fill="currentColor"
        height="53"
        width="1"
        x="16"
        y="9"
      />
      <rect
        fill="currentColor"
        height="53"
        width="1"
        x="36"
        y="9"
      />
      <rect
        fill="currentColor"
        height="9"
        width="91"
        x="0"
        y="0"
      />
      <rect
        fill="#BC2B3F"
        height="9"
        width="16"
        x="0"
        y="31"
      />
      <rect
        fill="#BC2B3F"
        height="9"
        width="16"
        x="0"
        y="53"
      />
      <rect
        fill="#398544"
        height="9"
        width="16"
        x="0"
        y="9"
      />
      <rect
        fill="#398544"
        height="9"
        width="16"
        x="0"
        y="20"
      />
      <rect
        fill="#398544"
        height="9"
        width="16"
        x="0"
        y="42"
      />
      <rect
        fill="currentColor"
        height="2"
        width="91"
        x="0"
        y="18"
      />
      <rect
        fill="currentColor"
        height="2"
        width="91"
        x="0"
        y="29"
      />
      <rect
        fill="currentColor"
        height="2"
        width="91"
        x="0"
        y="40"
      />
      <rect
        fill="currentColor"
        height="2"
        width="91"
        x="0"
        y="51"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 29`] = `
<svg
  viewBox="0 0 91 62"
  width="25%"
>
  <g
    transform="translate(-48.000000, -9.000000)"
  >
    <rect
      fill="transparent"
      height="62"
      width="91"
      x="48"
      y="9"
    />
    <rect
      fill="currentColor"
      height="53"
      width="1"
      x="64"
      y="18"
    />
    <rect
      fill="currentColor"
      height="53"
      width="1"
      x="84"
      y="18"
    />
    <rect
      fill="currentColor"
      height="9"
      width="91"
      x="48"
      y="9"
    />
    <rect
      fill="currentColor"
      height="2"
      width="91"
      x="48"
      y="27"
    />
    <rect
      fill="currentColor"
      height="2"
      width="91"
      x="48"
      y="38"
    />
    <rect
      fill="currentColor"
      height="2"
      width="91"
      x="48"
      y="49"
    />
    <rect
      fill="currentColor"
      height="2"
      width="91"
      x="48"
      y="60"
    />
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with percentage width 30`] = `
<svg
  viewBox="0 0 141 42"
  width="25%"
>
  <defs>
    <linearGradient
      id="trace-gradient"
      x1="50%"
      x2="50%"
      y1="0%"
      y2="92.1217315%"
    >
      <stop
        offset="0%"
        stopColor="blue"
      />
      <stop
        offset="100%"
        stopColor="blue"
        stopOpacity="0"
      />
    </linearGradient>
  </defs>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <g
      transform="translate(-22.000000, -30.000000)"
    >
      <polygon
        fill="url(#trace-gradient)"
        opacity="0.237406716"
        points="23 62.3021054 30.4240079 56.5651795 37.5827513 59.4336425 44.9389938 51.1076915 52.319224 49.11219 59.6384854 54.5826359 66.89258 40.2839833 74.2144401 42.3741331 81.6252547 35.4484697 88.9489139 34.3493101 96.1386414 40.2839833 103.458702 45.5206254 110.890906 43.2907567 118.177584 50.2226173 125.3907 40.2839833 132.717957 37.9251 140.086393 32.7549371 147.445434 34.3493101 154.573993 31 162 31.9273279 162 76 23.0189852 76"
      />
      <polyline
        points="23 62 30.4240079 56.3184428 37.5827513 59.1592214 44.9389938 50.9136265 52.319224 48.9373841 59.6384854 54.3550332 66.89258 40.194381 74.2144401 42.2643581 81.6252547 35.4055363 88.9489139 34.3169849 96.1386414 40.194381 103.458702 45.3804827 110.890906 43.1721351 118.177584 50.0370944 125.3907 40.194381 132.717957 37.8582639 140.086393 32.7379997 147.445434 34.3169849 154.573993 31 162 31.918378"
        stroke="blue"
        strokeWidth="1.5"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 1`] = `
<svg
  viewBox="0 0 11 11"
  width="25px"
>
  <g
    fill="blue"
    transform="translate(-11.000000, -22.000000)"
  >
    <g
      transform="translate(11.000000, 22.000000)"
    >
      <rect
        height="11"
        width="1"
        x="5"
        y="0"
      />
      <rect
        height="11"
        transform="translate(5.500000, 5.500000) rotate(-270.000000) translate(-5.500000, -5.500000) "
        width="1"
        x="5"
        y="0"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 2`] = `
<svg
  viewBox="0 0 50 50"
  width="25px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      transform="translate(-110.000000, -94.000000)"
    >
      <g>
        <path
          d="M136,118 L160,118 L160,120 L136,120 L136,144 L134,144 L134,120 L110,120 L110,118 L134,118 L134,94 L136,94 L136,118 Z"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 3`] = `
<svg
  viewBox="0 0 8 9"
  width="25px"
>
  <g
    fill="blue"
    transform="translate(-20.000000, -11.000000)"
  >
    <g
      transform="translate(12.000000, 11.000000)"
    >
      <path
        d="M11,5 L8,5 L12,0 L16,5 L13,5 L13,9 L11,9 L11,5 Z"
        id="Icons/Arrow-sort-up"
        transform="translate(12.000000, 4.500000) scale(1, -1) rotate(-180.000000) translate(-12.000000, -4.500000) "
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 4`] = `
<svg
  viewBox="0 0 13 13"
  width="25px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      fillRule="nonzero"
      transform="translate(-17.000000, -17.000000)"
    >
      <g
        transform="translate(0.000000, 1.000000)"
      >
        <g
          transform="translate(17.000000, 16.000000)"
        >
          <path
            d="M7.8,5.2 L2.94666667,5.2 L6.41333333,1.73333333 L5.2,0.52 L0.26,5.46 C-0.0866666667,5.80666667 -0.0866666667,6.32666667 0.26,6.67333333 L5.2,11.6133333 L6.41333333,10.4 L2.94666667,6.93333333 L7.8,6.93333333 C9.70666667,6.93333333 11.2666667,8.49333333 11.2666667,10.4 L11.2666667,13 L13,13 L13,10.4 C13,7.54 10.66,5.2 7.8,5.2 Z"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 5`] = `
<svg
  viewBox="0 0 16 16"
  width="25px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      transform="translate(-1334.000000, -22.000000)"
    >
      <g
        transform="translate(1334.000000, 22.000000)"
      >
        <path
          d="M15,4 L14,4 L14,10 C14,10.552 13.552,11 13,11 L6.828,11 L5,13 L10,13 L13,16 L13,13 L15,13 C15.552,13 16,12.552 16,12 L16,5 C16,4.448 15.552,4 15,4 Z"
          fillRule="nonzero"
        />
        <path
          d="M1,0 L11,0 C11.552,0 12,0.448 12,1 L12,8 C12,8.552 11.552,9 11,9 L6,9 L3,12 L3,9 L1,9 C0.448,9 0,8.552 0,8 L0,1 C0,0.448 0.448,0 1,0 Z"
          fillRule="nonzero"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 6`] = `
<svg
  viewBox="0 0 11 7"
  width="25px"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      stroke="blue"
      strokeWidth="1.2"
      transform="translate(-321.000000, -147.000000)"
    >
      <polyline
        points="324.045716 144.990072 329.062822 150.007178 324.009928 155.060072"
        transform="translate(326.536375, 150.025072) rotate(90.000000) translate(-326.536375, -150.025072) "
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 7`] = `
<svg
  viewBox="0 0 12 12"
  width="25px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      fillRule="nonzero"
    >
      <polygon
        points="11.53 1.53 10.47 0.47 6 4.94 1.53 0.47 0.47 1.53 4.94 6 0.47 10.47 1.53 11.53 6 7.06 10.47 11.53 11.53 10.47 7.06 6"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 8`] = `
<svg
  viewBox="0 0 18 18"
  width="25px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      fillRule="nonzero"
      transform="translate(-1334.000000, -11.000000)"
    >
      <g>
        <g
          transform="translate(1.000000, 0.000000)"
        >
          <g
            transform="translate(1266.000000, 0.000000)"
          >
            <g
              transform="translate(67.000000, 11.000000)"
            >
              <path
                d="M14.5125,5.0625 L16.2,3.375 L14.625,1.8 L12.9375,3.4875 C12.15,2.925 11.1375,2.475 10.125,2.3625 L10.125,0 L7.875,0 L7.875,2.3625 C6.8625,2.5875 5.85,2.925 5.0625,3.4875 L3.4875,1.8 L1.8,3.4875 L3.4875,5.175 C2.925,5.85 2.475,6.8625 2.3625,7.875 L0,7.875 L0,10.125 L2.3625,10.125 C2.5875,11.1375 2.925,12.15 3.4875,12.9375 L1.8,14.625 L3.375,16.2 L5.0625,14.5125 C5.85,15.075 6.8625,15.525 7.875,15.6375 L7.875,18 L10.125,18 L10.125,15.6375 C11.1375,15.4125 12.15,15.075 12.9375,14.5125 L14.625,16.2 L16.2,14.625 L14.5125,12.9375 C15.075,12.15 15.525,11.1375 15.6375,10.125 L18,10.125 L18,7.875 L15.6375,7.875 C15.525,6.8625 15.075,5.85 14.5125,5.0625 Z M9,12.375 C7.0875,12.375 5.625,10.9125 5.625,9 C5.625,7.0875 7.0875,5.625 9,5.625 C10.9125,5.625 12.375,7.0875 12.375,9 C12.375,10.9125 10.9125,12.375 9,12.375 Z"
              />
            </g>
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 9`] = `
<svg
  viewBox="0 0 21 15"
  width="25px"
>
  <defs>
    <path
      d="M6.66233766,8.3125 C8.73506494,8.3125 10.3636364,9.975 10.3636364,12.0909091 L0,12.0909091 C0,9.975 1.62857143,8.3125 3.7012987,8.3125 L6.66233766,8.3125 Z M5.18181818,6.80113636 C3.55324675,6.80113636 2.22077922,5.44090909 2.22077922,3.77840909 L2.22077922,3.02272727 C2.22077922,1.36022727 3.55324675,0 5.18181818,0 C6.81038961,0 8.14285714,1.36022727 8.14285714,3.02272727 L8.14285714,3.77840909 C8.14285714,5.44090909 6.81038961,6.80113636 5.18181818,6.80113636 Z"
    />
  </defs>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      transform="translate(-1254.000000, -284.000000)"
    >
      <g
        transform="translate(1255.000000, 285.000000)"
      >
        <path
          d="M15.6623377,8.3125 C17.7350649,8.3125 19.3636364,9.975 19.3636364,12.0909091 L9,12.0909091 C9,9.975 10.6285714,8.3125 12.7012987,8.3125 L15.6623377,8.3125 Z M14.1818182,6.80113636 C12.5532468,6.80113636 11.2207792,5.44090909 11.2207792,3.77840909 L11.2207792,3.02272727 C11.2207792,1.36022727 12.5532468,0 14.1818182,0 C15.8103896,0 17.1428571,1.36022727 17.1428571,3.02272727 L17.1428571,3.77840909 C17.1428571,5.44090909 15.8103896,6.80113636 14.1818182,6.80113636 Z"
          fill="blue"
        />
        <g>
          <path
            d="M6.66233766,8.3125 C8.73506494,8.3125 10.3636364,9.975 10.3636364,12.0909091 L0,12.0909091 C0,9.975 1.62857143,8.3125 3.7012987,8.3125 L6.66233766,8.3125 Z M5.18181818,6.80113636 C3.55324675,6.80113636 2.22077922,5.44090909 2.22077922,3.77840909 L2.22077922,3.02272727 C2.22077922,1.36022727 3.55324675,0 5.18181818,0 C6.81038961,0 8.14285714,1.36022727 8.14285714,3.02272727 L8.14285714,3.77840909 C8.14285714,5.44090909 6.81038961,6.80113636 5.18181818,6.80113636 Z"
          />
          <path
            d="M6.66233766,7.8125 C9.01354116,7.8125 10.8636364,9.70113885 10.8636364,12.0909091 L10.8636364,12.5909091 L-0.5,12.5909091 L-0.5,12.0909091 C-0.5,9.70113885 1.3500952,7.8125 3.7012987,7.8125 L6.66233766,7.8125 Z M5.18181818,7.30113636 C3.27477053,7.30113636 1.72077922,5.71477024 1.72077922,3.77840909 L1.72077922,3.02272727 C1.72077922,1.08636613 3.27477053,-0.5 5.18181818,-0.5 C7.08886584,-0.5 8.64285714,1.08636613 8.64285714,3.02272727 L8.64285714,3.77840909 C8.64285714,5.71477024 7.08886584,7.30113636 5.18181818,7.30113636 Z"
            fill="blue"
            strokeWidth="1"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 10`] = `
<svg
  viewBox="0 0 14 17"
  width="25px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      fillRule="nonzero"
      transform="translate(-23.000000, -14.000000)"
    >
      <g
        transform="translate(23.000000, 1.000000)"
      >
        <g
          transform="translate(0.000000, 13.000000)"
        >
          <path
            d="M14,6 L10,6 L10,0 L4,0 L4,6 L0,6 L7,13 L14,6 Z M0,15 L0,17 L14,17 L14,15 L0,15 Z"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 11`] = `
<svg
  viewBox="0 0 24 24"
  width="25px"
>
  <g
    fill="blue"
    fillRule="nonzero"
    transform="translate(-11.000000, -12.000000)"
  >
    <path
      d="M23,12 C16.383,12 11,17.383 11,24 C11,30.617 16.383,36 23,36 C29.617,36 35,30.617 35,24 C35,17.383 29.617,12 23,12 Z M24.645,17 L24,26 L22,26 L21.392,17 L24.645,17 Z M23,32 C21.895,32 21,31.105 21,30 C21,28.895 21.895,28 23,28 C24.105,28 25,28.895 25,30 C25,31.105 24.105,32 23,32 Z"
      id="Shape"
    />
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 12`] = `
<svg
  viewBox="0 0 16 12"
  width="25px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      fillRule="nonzero"
      transform="translate(-618.000000, -14.000000)"
    >
      <g
        transform="translate(1.000000, 0.000000)"
      >
        <g
          transform="translate(445.000000, 0.000000)"
        >
          <g
            transform="translate(172.000000, 14.000000)"
          >
            <path
              d="M7.975,12 C11.575,12 14.375,8.9 15.575,7.1 C16.075,6.4 16.075,5.5 15.575,4.8 C14.375,3.1 11.575,0 7.975,0 C4.375,0 1.575,3.1 0.375,4.9 C-0.125,5.6 -0.125,6.5 0.375,7.1 C1.575,8.9 4.375,12 7.975,12 Z M7.975,3 C9.675,3 10.975,4.3 10.975,6 C10.975,7.7 9.675,9 7.975,9 C6.275,9 4.975,7.7 4.975,6 C4.975,4.3 6.275,3 7.975,3 Z"
            />
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 13`] = `
<svg
  viewBox="0 0 14 13"
  width="25px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      transform="translate(-13.000000, -16.000000)"
    >
      <g
        transform="translate(13.000000, 16.000000)"
      >
        <rect
          height="2"
          id="Rectangle-16"
          rx="1"
          width="14"
          x="0"
          y="9"
        />
        <rect
          height="2"
          id="Rectangle-16"
          rx="1"
          width="14"
          x="0"
          y="2"
        />
        <rect
          height="6"
          id="Rectangle"
          rx="1.5"
          width="3"
          x="3"
          y="0"
        />
        <rect
          height="6"
          id="Rectangle"
          rx="1.5"
          width="3"
          x="8"
          y="7"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 14`] = `
<svg
  viewBox="0 0 38 36"
  width="25px"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      transform="translate(-61.000000, 1.000000)"
    >
      <polyline
        points="88.5 13.28 93.51 16 98.51 9"
        stroke="blue"
        strokeWidth="1.2"
      />
      <polyline
        points="61.5 17 64.9380014 20 68.3760028 13 73.5330048 24 76.9710062 16 80.4090076 19 84 14.183"
        stroke="blue"
        strokeWidth="1.2"
      />
      <rect
        height="35"
        id="Rectangle-path"
        stroke="currentColor"
        strokeLinecap="square"
        width="37"
        x="61.5"
        y="-0.5"
      />
      <circle
        cx="86.5"
        cy="12.5"
        fill="blue"
        r="3.5"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 15`] = `
<svg
  height="20px"
  viewBox="0 0 20 20"
  width="20px"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
    >
      <path
        d="M9,15 L11,15 L11,9 L9,9 L9,15 Z M10,0 C4.48,0 0,4.48 0,10 C0,15.52 4.48,20 10,20 C15.52,20 20,15.52 20,10 C20,4.48 15.52,0 10,0 Z M10,18 C5.59,18 2,14.41 2,10 C2,5.59 5.59,2 10,2 C14.41,2 18,5.59 18,10 C18,14.41 14.41,18 10,18 Z M9,7 L11,7 L11,5 L9,5 L9,7 Z"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 16`] = `
<svg
  viewBox="0 0 16 14"
  width="25px"
>
  <g
    fill="blue"
    fillRule="nonzero"
    transform="translate(-1203.000000, -18.000000)"
  >
    <g
      transform="translate(1203.000000, 15.000000)"
    >
      <path
        d="M15,3 L1,3 C0.448,3 0,3.447 0,4 L0,16 C0,16.553 0.448,17 1,17 L15,17 C15.552,17 16,16.553 16,16 L16,4 C16,3.447 15.552,3 15,3 Z M14,15 L2,15 L2,8.723 L7.504,11.868 C7.812,12.044 8.189,12.044 8.496,11.868 L14,8.723 L14,15 Z M14,6.42 L8,9.849 L2,6.42 L2,5 L14,5 L14,6.42 Z"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 17`] = `
<svg
  viewBox="0 0 9 2"
  width="25px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      transform="translate(-104.000000, -42.000000)"
    >
      <rect
        height="9"
        transform="translate(108.500000, 43.000000) rotate(90.000000) translate(-108.500000, -43.000000) "
        width="2"
        x="107.5"
        y="38.5"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 18`] = `
<svg
  viewBox="0 0 10 10"
  width="25px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      transform="translate(-103.000000, -12.000000)"
    >
      <g
        transform="translate(103.000000, 12.000000)"
      >
        <rect
          height="10"
          width="2"
          x="4"
          y="0"
        />
        <rect
          height="10"
          transform="translate(5.000000, 5.000000) rotate(90.000000) translate(-5.000000, -5.000000) "
          width="2"
          x="4"
          y="0"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 19`] = `
<svg
  viewBox="0 0 17 17"
  width="25px"
>
  <g
    fill="none"
    stroke="none"
    strokeLinecap="round"
    strokeWidth="1"
  >
    <g
      stroke="blue"
      strokeWidth="2"
      transform="translate(1.000000, 1.000000)"
    >
      <g>
        <circle
          cx="6.5"
          cy="6.5"
          r="6"
        />
        <path
          d="M14.5,14.5 L10.742,10.742"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 20`] = `
<svg
  viewBox="0 0 10 11"
  width="25px"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      transform="translate(-1297.000000, -286.000000)"
    >
      <path
        d="M1303.06122,293.5625 C1304.94694,293.5625 1306.42857,295.075 1306.42857,297 L1297,297 C1297,295.075 1298.48163,293.5625 1300.36735,293.5625 L1303.06122,293.5625 Z M1301.71429,292.1875 C1300.23265,292.1875 1299.02041,290.95 1299.02041,289.4375 L1299.02041,288.75 C1299.02041,287.2375 1300.23265,286 1301.71429,286 C1303.19592,286 1304.40816,287.2375 1304.40816,288.75 L1304.40816,289.4375 C1304.40816,290.95 1303.19592,292.1875 1301.71429,292.1875 Z"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 21`] = `
<svg
  viewBox="0 0 16 18"
  width="25px"
>
  <g
    transform="translate(-12.000000, -11.000000)"
  >
    <g
      fill="blue"
      transform="translate(12.000000, 11.000000)"
    >
      <path
        d="M3,14 L0,14 L4,9 L8,14 L5,14 L5,18 L3,18 L3,14 Z"
        transform="translate(4.000000, 13.500000) scale(1, -1) translate(-4.000000, -13.500000) "
      />
      <path
        d="M11,5 L8,5 L12,0 L16,5 L13,5 L13,9 L11,9 L11,5 Z"
        transform="translate(12.000000, 4.500000) scale(1, -1) rotate(-180.000000) translate(-12.000000, -4.500000) "
      />
    </g>
    <path
      d="M15.3928571,15.3571429 L25.4087883,24.4625348"
      stroke="blue"
      strokeLinecap="square"
      strokeWidth="1.5"
    />
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 22`] = `
<svg
  viewBox="0 0 11 11"
  width="25px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
    >
      <g
        transform="translate(5.500000, 5.500000) rotate(-270.000000) translate(-5.500000, -5.500000) "
      >
        <g>
          <rect
            height="11"
            width="1"
            x="0"
            y="0"
          />
          <rect
            height="11"
            width="1"
            x="5"
            y="0"
          />
          <rect
            height="11"
            width="1"
            x="10"
            y="0"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 23`] = `
<svg
  viewBox="0 0 14 13"
  width="25px"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      id="UI-/-Dropdown"
      stroke="blue"
      strokeWidth="1.5"
      transform="translate(-175.000000, -208.000000)"
    >
      <polyline
        id="Path-2"
        points="176 215.527473 179.75 219.153846 188 209"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 24`] = `
<svg
  viewBox="0 0 14 18"
  width="25px"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
    >
      <g
        id="Group"
      >
        <rect
          height="18"
          id="Rectangle"
          width="13.6140351"
          x="0"
          y="0"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 25`] = `
<svg
  viewBox="0 0 15 18"
  width="25px"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      transform="translate(-29.000000, 0.000000)"
    >
      <g>
        <g
          transform="translate(29.000000, 0.000000)"
        >
          <rect
            height="8"
            width="13.6140351"
            x="0.692982456"
            y="10"
          />
          <rect
            height="8"
            width="13.6140351"
            x="0.692982456"
            y="0"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 26`] = `
<svg
  viewBox="0 0 14 18"
  width="25px"
>
  <g
    fill="none"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="blue"
      transform="translate(-59.000000, 0.000000)"
    >
      <g
        transform="translate(59.000000, 0.000000)"
      >
        <rect
          height="4"
          width="13.6140351"
          x="0.385964912"
          y="14"
        />
        <rect
          height="4"
          width="13.6140351"
          x="0.385964912"
          y="7"
        />
        <rect
          height="4"
          width="13.6140351"
          x="0.385964912"
          y="0"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 27`] = `
<svg
  viewBox="0 0 19 17"
  width="25px"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      transform="translate(-304.000000, -527.000000)"
    >
      <g
        transform="translate(304.000000, 527.000000)"
      >
        <rect
          fill="blue"
          height="5"
          width="19"
          x="0"
          y="0"
        />
        <rect
          fill="blue"
          height="1"
          width="19"
          x="0"
          y="8"
        />
        <rect
          fill="blue"
          height="1"
          width="19"
          x="0"
          y="12"
        />
        <rect
          fill="blue"
          height="12"
          width="1"
          x="9"
          y="5"
        />
        <rect
          height="16"
          stroke="blue"
          width="18"
          x="0.5"
          y="0.5"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 28`] = `
<svg
  viewBox="0 0 91 62"
  width="25px"
>
  <g
    transform="translate(-48.000000, -9.000000)"
  >
    <g
      transform="translate(48.000000, 9.000000)"
    >
      <rect
        fill="transparent"
        height="62"
        width="91"
        x="0"
        y="0"
      />
      <rect
        fill="currentColor"
        height="53"
        width="1"
        x="16"
        y="9"
      />
      <rect
        fill="currentColor"
        height="53"
        width="1"
        x="36"
        y="9"
      />
      <rect
        fill="currentColor"
        height="9"
        width="91"
        x="0"
        y="0"
      />
      <rect
        fill="#BC2B3F"
        height="9"
        width="16"
        x="0"
        y="31"
      />
      <rect
        fill="#BC2B3F"
        height="9"
        width="16"
        x="0"
        y="53"
      />
      <rect
        fill="#398544"
        height="9"
        width="16"
        x="0"
        y="9"
      />
      <rect
        fill="#398544"
        height="9"
        width="16"
        x="0"
        y="20"
      />
      <rect
        fill="#398544"
        height="9"
        width="16"
        x="0"
        y="42"
      />
      <rect
        fill="currentColor"
        height="2"
        width="91"
        x="0"
        y="18"
      />
      <rect
        fill="currentColor"
        height="2"
        width="91"
        x="0"
        y="29"
      />
      <rect
        fill="currentColor"
        height="2"
        width="91"
        x="0"
        y="40"
      />
      <rect
        fill="currentColor"
        height="2"
        width="91"
        x="0"
        y="51"
      />
    </g>
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 29`] = `
<svg
  viewBox="0 0 91 62"
  width="25px"
>
  <g
    transform="translate(-48.000000, -9.000000)"
  >
    <rect
      fill="transparent"
      height="62"
      width="91"
      x="48"
      y="9"
    />
    <rect
      fill="currentColor"
      height="53"
      width="1"
      x="64"
      y="18"
    />
    <rect
      fill="currentColor"
      height="53"
      width="1"
      x="84"
      y="18"
    />
    <rect
      fill="currentColor"
      height="9"
      width="91"
      x="48"
      y="9"
    />
    <rect
      fill="currentColor"
      height="2"
      width="91"
      x="48"
      y="27"
    />
    <rect
      fill="currentColor"
      height="2"
      width="91"
      x="48"
      y="38"
    />
    <rect
      fill="currentColor"
      height="2"
      width="91"
      x="48"
      y="49"
    />
    <rect
      fill="currentColor"
      height="2"
      width="91"
      x="48"
      y="60"
    />
  </g>
</svg>
`;

exports[`<Icon /> snapshots Expect snapshot to match with props 30`] = `
<svg
  viewBox="0 0 141 42"
  width="25px"
>
  <defs>
    <linearGradient
      id="trace-gradient"
      x1="50%"
      x2="50%"
      y1="0%"
      y2="92.1217315%"
    >
      <stop
        offset="0%"
        stopColor="blue"
      />
      <stop
        offset="100%"
        stopColor="blue"
        stopOpacity="0"
      />
    </linearGradient>
  </defs>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <g
      transform="translate(-22.000000, -30.000000)"
    >
      <polygon
        fill="url(#trace-gradient)"
        opacity="0.237406716"
        points="23 62.3021054 30.4240079 56.5651795 37.5827513 59.4336425 44.9389938 51.1076915 52.319224 49.11219 59.6384854 54.5826359 66.89258 40.2839833 74.2144401 42.3741331 81.6252547 35.4484697 88.9489139 34.3493101 96.1386414 40.2839833 103.458702 45.5206254 110.890906 43.2907567 118.177584 50.2226173 125.3907 40.2839833 132.717957 37.9251 140.086393 32.7549371 147.445434 34.3493101 154.573993 31 162 31.9273279 162 76 23.0189852 76"
      />
      <polyline
        points="23 62 30.4240079 56.3184428 37.5827513 59.1592214 44.9389938 50.9136265 52.319224 48.9373841 59.6384854 54.3550332 66.89258 40.194381 74.2144401 42.2643581 81.6252547 35.4055363 88.9489139 34.3169849 96.1386414 40.194381 103.458702 45.3804827 110.890906 43.1721351 118.177584 50.0370944 125.3907 40.194381 132.717957 37.8582639 140.086393 32.7379997 147.445434 34.3169849 154.573993 31 162 31.918378"
        stroke="blue"
        strokeWidth="1.5"
      />
    </g>
  </g>
</svg>
`;
